k8s/admin-frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jap-shop-admin-frontend
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: jap-shop-admin-frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
