k8s/admin-frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jap-shop-admin-frontend
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: admin.janakalyanayurved.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jap-shop-admin-frontend
            port:
              number: 80
